--- a/global.css
+++ b/global.css
@@ -113,3 +113,21 @@ footer {
     }
   }
 }
+
+/* Add in media, since should happen only on the small screens */
+.menu {
+  display: none;
+  position: fixed;
+  transform: translateY(0%);
+  transition: transform 0.2s;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 99;
+  background-color: var(--color-dark-1);
+  color: var(--text-color-light);
+  list-style: none;
+  padding-top: 4em;
+  text-align: center;
+}
