--- a/global.css
+++ b/global.css
@@ -46,6 +46,29 @@ header {
       ul {
         display: flex;
         gap: 2rem;
+      }
+
+      .menu {
+        @media (max-width: 650px) {
+          display: none;
+          flex-direction: column;
+          align-items: center;
+          position: fixed;
+          padding-top: 2rem;
+          gap: 1rem;
+          background: var(--color-dark-1);
+          top: 44px;
+          left: 0;
+          right: 0;
+          bottom: 44px;
+        }
+        .display-light-mode {
+          display: none;
+
+          @media (max-width: 650px) {
+            display: block;
+          }
+        }
 
         a {
           font-family: var(--font-primary);
@@ -56,27 +79,16 @@ header {
       }
     }
 
-    .menu {
-      @media (max-width: 650px) {
-        display: none;
-        position: fixed;
-        padding-top: 1rem;
-        flex-direction: column;
-        align-items: center;
-        gap: 1rem;
-        background: var(--color-dark-1);
-        top: 44px;
-        left: 0;
-        right: 0;
-        bottom: 44px;
-      }
-    }
-
     .hamburger-menu {
-      /* position: fixed; */
-      /* z-index: 100; */
-
       @media (min-width: 650px) {
+        display: none;
+      }
+
+      .hamburger-menu-icon {
+        display: block;
+      }
+
+      .close-menu-icon {
         display: none;
       }
     }
@@ -93,6 +105,10 @@ header {
       background: transparent;
       border: none;
       cursor: pointer;
+    }
+
+    .material-icons {
+      color: var(--color-yellow);
     }
   }
 }
@@ -135,12 +151,4 @@ footer {
       }
     }
   }
-}
-
-.close-menu-btn {
-  display: none;
-}
-
-.material-icons {
-  color: var(--color-yellow);
 }
