--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 .home-view {
-  display: none; /*flex, none*/
+  display: flex; /*flex, none*/
   flex-direction: column;
   align-items: center;
   gap: 2rem;
@@ -126,6 +126,105 @@
         background-color: var(--color-yellow);
         border: 1px solid var(--color-dark-2);
         color: var(--color-dark-2);
+      }
+    }
+  }
+}
+
+/* GAME PLAY */
+
+.game-play-view {
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 1.5rem;
+  height: 100vh;
+
+  .game-play-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+
+    .score-container {
+      ul {
+        display: flex;
+        flex-direction: column;
+        gap: 0.3rem;
+        background-color: var(--color-dark-2);
+        padding: 0.3rem 0.9rem;
+        border-radius: 0.5rem;
+        color: var(--color-yellow);
+        font-family: var(--font-primary);
+        text-transform: uppercase;
+        font-size: 0.8rem;
+      }
+    }
+
+    .title {
+      text-align: center;
+
+      h4 {
+        font-family: var(--font-secondary);
+        font-size: 1.2rem;
+        color: var(--color-yellow);
+      }
+
+      p {
+        font-family: var(--font-primary);
+        font-size: 1rem;
+        color: var(--color-accent);
+      }
+    }
+
+    button {
+      background: transparent;
+      border: none;
+      color: var(--color-yellow);
+
+      .material-icons {
+        font-size: 28px;
+        cursor: pointer;
+      }
+    }
+  }
+
+  .dragon-eye {
+    text-align: center;
+  }
+
+  .word-tile {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+
+    .tile {
+      padding: 1rem;
+      border-radius: 0.2rem;
+      background-color: var(--color-accent);
+      border: 1px solid var(--color-dark-2);
+    }
+  }
+
+  .qwerty {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    .qwerty-row {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+
+      .tile {
+        padding: 0.5rem;
+        width: 28px;
+        background-color: var(--color-yellow);
+        cursor: pointer;
+        text-align: center;
+        border-radius: 0.2rem;
+        font-family: var(--font-primary);
+        font-weight: bold;
+        border: 1px solid var(--color-dark-2);
       }
     }
   }
