--- a/index.css
+++ b/index.css
@@ -216,8 +216,8 @@
       gap: 1rem;
 
       .tile {
-        padding: 0.5rem;
-        width: 28px;
+        width: 32px;
+        height: 32px;
         background-color: var(--color-yellow);
         cursor: pointer;
         text-align: center;
