--- a/index.css
+++ b/index.css
@@ -138,7 +138,7 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 1.5rem;
-  height: 100vh;
+  height: 80vh; /*Check this value*/
 
   .game-play-header {
     display: flex;
@@ -155,8 +155,13 @@
         border-radius: 0.5rem;
         color: var(--color-yellow);
         font-family: var(--font-primary);
-        text-transform: uppercase;
+
         font-size: 0.8rem;
+        text-shadow: -5px 5px 5px #000;
+
+        .score {
+          text-transform: uppercase;
+        }
       }
     }
 
@@ -176,20 +181,16 @@
       }
     }
 
-    button {
-      background: transparent;
-      border: none;
+    .material-icons {
+      font-size: 28px;
       color: var(--color-yellow);
-
-      .material-icons {
-        font-size: 28px;
-        cursor: pointer;
-      }
     }
   }
 
   .dragon-eye {
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    gap: 0.8rem;
   }
 
   .word-tile {
@@ -227,5 +228,18 @@
         border: 1px solid var(--color-dark-2);
       }
     }
+  }
+
+  button {
+    align-self: center;
+    padding: 0.3rem 1rem;
+    background-color: var(--color-accent);
+    font-family: var(--font-primary);
+    font-size: 0.85rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    border-radius: 0.4rem;
+    border: 1px solid var(--color-dark-2);
+    cursor: pointer;
   }
 }
