--- a/global.css
+++ b/global.css
@@ -42,6 +42,7 @@ header {
 
     nav {
       display: block;
+      z-index: 10;
 
       ul {
         display: flex;
@@ -61,9 +62,7 @@ header {
           top: 44px;
           left: 0;
           right: 0;
-
-          /* Need to fix the bottom value, currently is fixed, or make it to 0 */
-          bottom: 44px;
+          bottom: 0;
         }
         .display-light-mode {
           display: none;
