--- a/index.css
+++ b/index.css
@@ -44,7 +44,6 @@
     width: 75%;
     padding: 1rem;
     cursor: pointer;
-    color: var(--color-yellow);
 
     @media (min-width: 650px) {
       width: auto;
@@ -52,7 +51,7 @@
 
     h3 {
       font-family: var(--font-primary);
-      /* color: var(--color-yellow); */
+      color: var(--color-yellow);
       text-transform: uppercase;
       font-size: 1rem;
     }
@@ -66,10 +65,13 @@
       max-width: 265px;
     }
 
+    &:hover p,
+    &:hover h3 {
+      color: var(--color-dark-2);
+    }
+
     &:hover {
       background-color: var(--color-yellow);
-      border: 1px solid var(--color-dark-2);
-      color: var(--color-dark-2);
     }
   }
 }
@@ -134,7 +136,7 @@
 /* GAME PLAY */
 
 .game-play-view {
-  display: none;
+  display: none; /*flex, none*/
   flex-direction: column;
   justify-content: space-between;
   padding: 1.5rem;
@@ -191,6 +193,18 @@
     display: flex;
     justify-content: center;
     gap: 0.8rem;
+  }
+
+  .timer-container {
+    display: none; /*flex, none*/
+    justify-content: center;
+    align-items: center;
+    gap: 0.8rem;
+    color: var(--color-yellow);
+
+    .timer {
+      font-size: 1.3rem;
+    }
   }
 
   .word-tile {
