--- a/index.css
+++ b/index.css
@@ -133,6 +133,62 @@
   }
 }
 
+/* Choose Category Modal */
+.choose-category-modal {
+  display: none; /*flex, none*/
+  flex-direction: column;
+  position: fixed;
+  width: 300px;
+  height: 430px;
+  border-radius: 0.5rem;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  background: var(--color-dark-1);
+
+  button {
+    background: transparent;
+    border: none;
+    align-self: flex-end;
+    padding: 1rem;
+  }
+
+  .category-close-btn {
+    color: var(--color-yellow);
+    cursor: pointer;
+  }
+
+  .category-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+    padding-top: 2rem;
+
+    .category {
+      border: 1px solid var(--color-yellow);
+      background: var(--color-dark-2);
+      border-radius: 4rem 0.5rem 4rem 0.5rem;
+      width: 60%;
+      padding: 1rem;
+      cursor: pointer;
+      text-align: center;
+      color: var(--color-yellow);
+      font-family: var(--font-primary);
+      font-weight: bold;
+      text-transform: uppercase;
+
+      &:hover {
+        background-color: var(--color-yellow);
+        border: 1px solid var(--color-dark-2);
+        color: var(--color-dark-2);
+      }
+    }
+  }
+}
+
 /* GAME PLAY */
 
 .game-play-view {
