--- a/index.css
+++ b/index.css
@@ -76,9 +76,9 @@
   }
 }
 
-/* Difficulty Level Modal */
+/* Modal */
 
-.difficulty-level-modal {
+.modal {
   display: none; /*flex, none*/
   flex-direction: column;
   position: fixed;
@@ -99,93 +99,44 @@
     padding: 1rem;
   }
 
-  .difficulty-lvl-close-btn {
+  .modal-close-btn {
     color: var(--color-yellow);
     cursor: pointer;
   }
 
-  .difficulty-levels-container {
+  .modal-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1.5rem;
     padding-top: 2rem;
+  }
 
-    .difficulty-level {
-      border: 1px solid var(--color-yellow);
-      background: var(--color-dark-2);
-      border-radius: 4rem 0.5rem 4rem 0.5rem;
-      width: 60%;
-      padding: 1.5rem;
-      cursor: pointer;
-      text-align: center;
-      color: var(--color-yellow);
-      font-family: var(--font-primary);
-      font-weight: bold;
-      text-transform: uppercase;
+  .modal-el {
+    border: 1px solid var(--color-yellow);
+    background: var(--color-dark-2);
+    border-radius: 4rem 0.5rem 4rem 0.5rem;
+    width: 60%;
+    padding: 1.5rem;
+    cursor: pointer;
+    text-align: center;
+    color: var(--color-yellow);
+    font-family: var(--font-primary);
+    font-weight: bold;
+    text-transform: uppercase;
 
-      &:hover {
-        background-color: var(--color-yellow);
-        border: 1px solid var(--color-dark-2);
-        color: var(--color-dark-2);
-      }
+    &:hover {
+      background-color: var(--color-yellow);
+      border: 1px solid var(--color-dark-2);
+      color: var(--color-dark-2);
     }
   }
 }
 
 /* Choose Category Modal */
 .choose-category-modal {
-  display: none; /*flex, none*/
-  flex-direction: column;
-  position: fixed;
-  width: 300px;
-  height: 430px;
-  border-radius: 0.5rem;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  background: var(--color-dark-1);
-
-  button {
-    background: transparent;
-    border: none;
-    align-self: flex-end;
+  .category {
     padding: 1rem;
-  }
-
-  .category-close-btn {
-    color: var(--color-yellow);
-    cursor: pointer;
-  }
-
-  .category-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1.5rem;
-    padding-top: 2rem;
-
-    .category {
-      border: 1px solid var(--color-yellow);
-      background: var(--color-dark-2);
-      border-radius: 4rem 0.5rem 4rem 0.5rem;
-      width: 60%;
-      padding: 1rem;
-      cursor: pointer;
-      text-align: center;
-      color: var(--color-yellow);
-      font-family: var(--font-primary);
-      font-weight: bold;
-      text-transform: uppercase;
-
-      &:hover {
-        background-color: var(--color-yellow);
-        border: 1px solid var(--color-dark-2);
-        color: var(--color-dark-2);
-      }
-    }
   }
 }
 
