--- a/index.css
+++ b/index.css
@@ -228,29 +228,35 @@
   .word-tile {
     display: flex;
     justify-content: center;
-    gap: 1rem;
+    gap: 0.3rem;
 
     .tile {
-      padding: 1rem;
+      width: 28px;
+      height: 28px;
       border-radius: 0.2rem;
       background-color: var(--color-accent);
       border: 1px solid var(--color-dark-2);
+
+      @media (min-width: 650px) {
+        width: 32px;
+        height: 32px;
+      }
     }
   }
 
   .qwerty {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.3rem;
 
     .qwerty-row {
       display: flex;
       justify-content: center;
-      gap: 1rem;
+      gap: 0.3rem;
 
       .tile {
-        width: 32px;
-        height: 32px;
+        width: 28px;
+        height: 28px;
         background-color: var(--color-yellow);
         cursor: pointer;
         text-align: center;
@@ -258,6 +264,11 @@
         font-family: var(--font-primary);
         font-weight: bold;
         border: 1px solid var(--color-dark-2);
+
+        @media (min-width: 650px) {
+          width: 32px;
+          height: 32px;
+        }
       }
     }
   }
