--- a/index.css
+++ b/index.css
@@ -206,6 +206,13 @@
     }
   }
 
+  .lost-game-text {
+    color: var(--color-yellow);
+    font-family: var(--font-secondary);
+    font-size: 2rem;
+    font-weight: bold;
+  }
+
   .timer-container {
     display: none; /*flex, none*/
     justify-content: center;
@@ -281,6 +288,7 @@
 
       .transparent {
         background: transparent;
+        cursor: not-allowed;
       }
     }
   }
@@ -296,5 +304,9 @@
     border-radius: 0.4rem;
     border: 1px solid var(--color-dark-2);
     cursor: pointer;
+
+    &:disabled {
+      cursor: not-allowed;
+    }
   }
 }
