--- a/index.css
+++ b/index.css
@@ -288,7 +288,8 @@
 
       .transparent {
         background: transparent;
-        cursor: not-allowed;
+        pointer-events: none;
+        cursor: default;
       }
     }
   }
