--- a/score.css
+++ b/score.css
@@ -23,6 +23,8 @@
 table.score-table {
   width: 100%;
   border-collapse: collapse;
+  /* border-collapse: separate; */
+  /* border-spacing: 0 0.2rem;  */
   text-align: center;
   font-size: 1rem;
 
@@ -45,12 +47,14 @@ table.score-table {
   /* Body rows: zebra stripes */
   tbody tr:nth-child(odd) {
     background: var(--color-dark-1);
-    color: var(--color-bg-dark);
+    color: var(--color-yellow);
+    -webkit-text-stroke: 0.2px var(--color-bg-dark);
   }
 
   tbody tr:nth-child(even) {
     background: var(--color-dark-3);
-    color: var(--color-bg-dark);
+    color: var(--color-yellow);
+    -webkit-text-stroke: 0.2px var(--color-bg-dark);
   }
 }
 
