--- a/score.css
+++ b/score.css
@@ -1,10 +1,19 @@
+main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: var(--font-primary);
+  color: var(--color-yellow);
+  padding: 2rem 1rem;
+}
+
 .score-container {
-  width: 100%;
-  margin: 5rem auto;
   background: var(--color-opacity);
-  padding: 1.5rem 2rem;
-  border-radius: 0.5rem;
-  max-width: 640px;
+  max-width: 800px;
+  width: 100%;
+  padding: 2.5rem 2rem;
+  border-radius: 1rem;
+  border: 1px solid var(--color-yellow);
 
   h1 {
     text-align: center;
@@ -23,8 +32,6 @@
 table.score-table {
   width: 100%;
   border-collapse: collapse;
-  /* border-collapse: separate; */
-  /* border-spacing: 0 0.2rem;  */
   text-align: center;
   font-size: 1rem;
 
@@ -56,11 +63,10 @@ table.score-table {
     color: var(--color-yellow);
     -webkit-text-stroke: 0.2px var(--color-bg-dark);
   }
-}
 
-/* Totals row */
-table.score-table tfoot tr {
-  background: var(--color-yellow);
-  color: var(--color-bg-dark);
-  font-weight: 700;
+  tfoot tr {
+    background: var(--color-yellow);
+    color: var(--color-bg-dark);
+    font-weight: 700;
+  }
 }
