--- a/global.css
+++ b/global.css
@@ -16,6 +16,7 @@
   --color-opacity: rgba(26, 12, 9, 0.7); /* Opacity 70%*/
   --color-yellow: #eeb84c;
   --color-accent: #ebdbab;
+  --bg-image: url(./images/dragon-bg.jpg);
   --font-primary: "Cardo", serif;
   --font-secondary: "Cinzel Decorative", serif;
 }
@@ -120,7 +121,7 @@ header {
 }
 
 main {
-  background-image: url(./images/dragon-bg.jpg);
+  background-image: var(--bg-image);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
