--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   gap: 2rem;
-  padding: 2rem;
+  padding: 3rem 2rem;
   text-align: center;
 
   h1 {
@@ -264,7 +264,7 @@
       background-color: var(--color-accent);
       border: 1px solid var(--color-dark-2);
 
-      @media (min-width: 650px) {
+      @media (min-width: 500px) {
         width: 32px;
         height: 32px;
       }
