--- a/storyline.css
+++ b/storyline.css
@@ -2,13 +2,16 @@ main {
   font-family: var(--font-primary);
   color: var(--color-yellow);
   padding: 2rem 1rem;
-  /* background-size: auto; */
 }
 
 .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   background: var(--color-opacity);
   max-width: 800px;
   width: 100%;
+  height: 99%;
   padding: 2.5rem 2rem;
   border-radius: 1rem;
   border: 1px solid var(--color-yellow);
@@ -58,14 +61,27 @@ h3 {
 
 .rules-wrapper {
   display: flex;
-  flex-direction: column;
-  gap: 1.25rem;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 2rem;
   margin-top: 1rem;
+
   > div {
     border-radius: 0.75rem;
     padding: 1.25rem 1.25rem 1rem;
     border: 1px solid var(--color-yellow);
     position: relative;
+
+    @media (max-width: 730px) {
+      width: 100%;
+    }
+
+    @media (min-width: 720px) {
+      width: 300px;
+    }
+    @media (min-width: 820px) {
+      width: 350px;
+    }
   }
 
   > div::before {
