--- a/storyline.css
+++ b/storyline.css
@@ -2,6 +2,10 @@ main {
   font-family: var(--font-primary);
   color: var(--color-yellow);
   padding: 2rem 1rem;
+
+  @media (max-width: 360px) {
+    padding: 1rem 0.5rem;
+  }
 }
 
 .container {
@@ -41,7 +45,11 @@ h3 {
 }
 
 .storyline {
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
+
+  @media (max-width: 360px) {
+    margin-bottom: 0;
+  }
 
   p {
     margin-bottom: 1rem;
@@ -65,6 +73,11 @@ h3 {
   flex-wrap: wrap;
   gap: 2rem;
   margin-top: 1rem;
+
+  @media (max-width: 360px) {
+    margin-top: 0;
+    gap: 1rem;
+  }
 
   > div {
     border-radius: 0.75rem;
