--- a/contact.css
+++ b/contact.css
@@ -11,6 +11,7 @@ main {
   background: var(--color-opacity);
   max-width: 800px;
   width: 100%;
+  height: 99%;
   padding: 2.5rem 2rem;
   border-radius: 1rem;
   border: 1px solid var(--color-yellow);
@@ -23,15 +24,12 @@ main {
 .contact-wrapper {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 1rem;
 }
 
 .dragon-eye {
   align-self: center;
-
-  @media (min-width: 650px) {
-    display: none;
-  }
 }
 
 h1 {
@@ -41,7 +39,7 @@ h1 {
 
 p {
   text-align: center;
-  padding: 0 1rem;
+  padding: 1rem 1rem;
   color: var(--color-accent);
 }
 
@@ -52,20 +50,23 @@ form {
 
   .full-name {
     display: flex;
-    flex-direction: column;
     gap: 1rem;
+
+    @media (max-width: 450px) {
+      flex-direction: column;
+    }
   }
 
   .form-field {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+  }
 
-    label {
-      font-size: 0.9rem;
-      text-transform: uppercase;
-      letter-spacing: 0.06rem;
-    }
+  label {
+    font-size: 0.9rem;
+    font-family: var(--font-secondary);
+    letter-spacing: 0.06rem;
   }
 
   input,
@@ -75,6 +76,7 @@ form {
     border-radius: 0.5rem;
     border: 1px solid var(--color-yellow);
     background: var(--color-opacity);
+    color: var(--color-accent);
     font-family: inherit;
     font-size: 0.95rem;
     resize: none;
@@ -105,20 +107,14 @@ form {
     letter-spacing: 0.08rem;
     cursor: pointer;
 
+    @media (min-width: 500px) {
+      width: 25%;
+      align-self: center;
+    }
+
     &:hover {
       background-color: var(--color-accent);
       color: var(--color-dark-3);
     }
-  }
-}
-
-.img-wrapper {
-  align-self: center;
-
-  @media (max-width: 650px) {
-    display: none;
-  }
-  img {
-    width: 150px;
   }
 }
