--- a/index.css
+++ b/index.css
@@ -1,21 +1,39 @@
+main {
+  font-family: var(--font-primary);
+  color: var(--color-yellow);
+  padding: 2rem 1rem;
+}
 .home-view {
-  display: flex; /*flex, none*/
+  display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  gap: 2rem;
-  padding: 3rem 2rem;
-  text-align: center;
+  gap: 3rem;
+  background: var(--color-opacity);
+  max-width: 800px;
+  width: 100%;
+  height: 99%;
+  padding: 2.5rem 2rem;
+  border-radius: 1rem;
+  border: 1px solid var(--color-yellow);
 
-  h1 {
-    font-family: var(--font-secondary);
-    font-size: 2rem;
-    color: var(--color-yellow);
-  }
+  .title-wrapper {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 0.6rem;
 
-  h2 {
-    font-family: var(--font-primary);
-    font-size: 1.25rem;
-    color: var(--color-accent);
+    h1 {
+      font-family: var(--font-secondary);
+      font-size: 2rem;
+      color: var(--color-yellow);
+    }
+
+    h2 {
+      font-family: var(--font-primary);
+      font-size: 1.25rem;
+      color: var(--color-accent);
+    }
   }
 }
 
@@ -30,7 +48,6 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    width: auto;
   }
 
   .mode {
@@ -41,12 +58,12 @@
     border: 1px solid var(--color-yellow);
     background-color: var(--color-opacity);
     border-radius: 4rem 0.5rem 4rem 0.5rem;
-    width: 75%;
+    width: 70%;
     padding: 1rem;
     cursor: pointer;
 
-    @media (min-width: 650px) {
-      width: auto;
+    @media (min-width: 690px) {
+      width: 290px;
     }
 
     h3 {
