--- a/score.css
+++ b/score.css
@@ -5,9 +5,13 @@ main {
 }
 
 .score-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   background: var(--color-opacity);
   max-width: 800px;
   width: 100%;
+  height: 99%;
   padding: 2.5rem 2rem;
   border-radius: 1rem;
   border: 1px solid var(--color-yellow);
