--- a/index.css
+++ b/index.css
@@ -160,9 +160,12 @@ main {
 .game-play-view {
   display: none; /*flex, none*/
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 1.5rem;
-  height: 80vh; /*Check this value*/
+  height: 99%;
+  background: var(--color-opacity);
+  border: 1px solid var(--color-yellow);
+  border-radius: 1rem;
 
   .game-play-header {
     display: flex;
