--- a/index.css
+++ b/index.css
@@ -132,6 +132,7 @@ main {
   }
 
   .modal-el {
+    align-self: center;
     border: 1px solid var(--color-yellow);
     background: var(--color-dark-2);
     border-radius: 4rem 0.5rem 4rem 0.5rem;
