--- a/index.css
+++ b/index.css
@@ -311,6 +311,7 @@ main {
         font-family: var(--font-primary);
         font-weight: bold;
         border: 1px solid var(--color-dark-2);
+        padding: 0;
 
         @media (min-width: 360px) {
           width: 32px;
